# SICSS-odissei-machine-learning

./: 1-Intro.md  Makefile  README.md  Theory-on-regression.md  check_install.py  environment.yaml  environment.yml  existing_resources.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: presentations.yml
docs/: 1-Intro.html  1-Intro.md  1-Introduction.html  1-Introduction.md  2-Performance-metrics.html  2-Performance-metrics.md  3-Performance-metrics.html  3-Performance-metrics.md  3-Regression-theory.html  3-Regression-theory.md  4-Best-practice.html  4-Best-practice.md  README.html  README.md  best_practice.html  best_practice.md  index.html  style.css
files/: apply-skills-to-liss-dataset-exercise.pptx  collaborative_doc_1.md  collaborative_doc_2.md  liss_train.csv
image/: NN_diagram_source.pptx  README.md  source.drawio
notebooks/: 1-Intro.ipynb  2-Data-Preparation.ipynb  2-DataPreperation.ipynb  3-Model-pipeline.ipynb  4-CrossValidation.ipynb  5-Regression.ipynb  Images_performance_metrics.ipynb  LearnMore.ipynb  LissData.ipynb
presentations/: index.html
