[tool.poetry]
name = "sicss-odissei-machine-learning"
version = "0.1.0"
description = ""
authors = ["Djura Smits <djura.smits@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.4"
jupyterlab = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
